  used in most cases).

* Fix bug causing passwords to be blanked in the database when promoting
  to e.g. bcrypt hashing but required modules are missing. This caused the
  user to be unable to log in thereafter until a new password was set, but
  did not allow any unauthorized access. (GitHub pull request #90)


Admin
-----

* Respect custom BACKUP_DIRECTORY in admin table downloads. This matches
  behavior expected by [export-database].

* Fix bug which blew away user's yes_tables and yes_functions setting when
  editing name/superuser status.
`
* Fix table editor composite key problems, both creating new and editing
  existing rows.

* Exclude canceled orders from reports.

* Remove support for ancient browsers and unused variables.

* Remove old help content.

* Move access table into SQL to avoid locking between users. (GitHub pull
  request #89)


Strap Demo Catalog
------------------

* Updated the versions of jQuery, Google Analytics, and Bootstrap used.

* Turn off UserDB ignore_case by default.

* Prevent browser autocomplete problems.

* Remove some legacy cart components.

* Formatting fixes on checkout pages.

* Fix broken random password number range; consistently make random
  instead of using zip or phone.

* Lengthen ip_addr database fields to support IPv6.

* Remove the option for session IDs in URLs, so cookies are always required.

* Add base configuration and settings to delegate [salestax] to 3rd-party tax
  APIs generally, and use of Tax Jar specifically.

* Support easy use of SQLite in makecat.


Other
-----

* Updated te utility with several new features.

* Quickbooks integration: Fix typos so that removing stray trailing
  whitespace works.

* Add tools for viewing/manipulating existing Storage sessions.

* Remove old mod_perl artifacts.

* Add support for {NEWLINE} token in [error] templates, by René Hertell
  from GitHub issue #40.

* Removed Vend::Email module that was added but never integrated
  (GitHub issue #58).


Gateway Log