@@ -1,4 +1,8 @@
-@_UI_STD_INIT_@<html>
+[if-mm !logged_in]
+	[bounce page="__UI_BASE__/login"]
+[/if-mm]
+@_UI_STD_INIT_@
+<html>
 <head>
 <title>
 [L]Quicklinks[/L]
@@ -19,9 +23,13 @@
 <tr class=rnorm>
 <td class=rnorm nowrap style="font-size: smaller">
 
-[if !scratch window_override]
-[seti win][data session arg][/seti]
-[/if]
+[calcn]
+	# Prevent XSS injection via mv_arg form parameter (CVE-2020-12685)
+	$Session->{arg} =~ s/\W+//ag;
+
+	$Scratch->{win} = $Session->{arg};
+	return;
+[/calcn]
 
 [menu menu-type=simple name=Quicklinks menu_group=mgroup localize=name,description]
 {PAGE:}
@@ -36,29 +44,30 @@
 {/PAGE?}
 [/menu]
 
-</FONT>
-                </TD>
-        </TR>
-</TABLE>
+</td>
+</tr>
+</table>
+
 </td></tr></table>
 </center>
 </div>
+
 <div align="center">
-<a href="javascript:self.window.close()">&#91;[L]close[/L]]</a>
+<a href="javascript:self.window.close()">&#91;[L]close[/L]&#93;</a>
 <br>
 <a  target="mainwindow[scratch win]"
 	href="[area href='__UI_BASE__/menu_editor'
 				form='
 					qmenu_name=Quicklinks
 				'
-			]">&#91;[L]edit[/L]]</a>
+			]">&#91;[L]edit[/L]&#93;</a>
 [if cgi mgroup eq full]
 <a href="[area
 			href='@@MV_PAGE@@'
 			form='
 				mv_arg=[scratch win]
 				'
-		]">&#91;[L]short menu[/L]]</a>
+		]">&#91;[L]short menu[/L]&#93;</a>
 [else]
 <a href="[area
 			href='@@MV_PAGE@@'
@@ -66,10 +75,9 @@
 				mgroup=full
 				mv_arg=[scratch win]
 				'
-		]">&#91;[L]full menu[/L]]</a>
+		]">&#91;[L]full menu[/L]&#93;</a>
 [/else]
 [/if]
 </div>
-</BODY>
-</HTML>
-
+</body>
+</html>
